--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FileManagerActivity"
+        <activity android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,10 +17,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:parentActivityName=".FileManagerActivity">
+        <!--<activity android:name=".MainActivity"-->
+            <!--android:parentActivityName=".FileManagerActivity">-->
 
-        </activity>
+        <!--</activity>-->
     </application>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
